# Deep-Reinforcement-Learning-Routing-NOAH

./: .gitignore  README.md  main.py  pyproject.toml
data/: la_trinidad_hazard_graph.gpickle  la_trinidad_hazard_graph.graphml  preprocessing_manifest.json
data/raw/noah/flood_hazard/: Benguet_Flood_25year.shx
data/raw/noah/landslide_susceptibility/: Benguet_LandslideHazards.dbf  Benguet_LandslideHazards.shx
data/staged_subgraphs/: selected_subgraph_n200.graphml
models/rl_checkpoints/: README.md
scripts/_archive/: migrate_cohort_to_benchmark.py  verify_numeric_equivalence.py
src/benchmarks/: monte_carlo.py  viz_algos.py
src/data/: prepare_data.py  visualize_hazards.py
src/evaluation/: README.md  __init__.py  evaluator.py  experimental_setup_blueprint_e2e.md  run_policies.py  scenario_generator.py  schemas.py
src/evaluation/activation/: __init__.py  deterministic_v3.py
src/evaluation/benchmarks/la_trinidad_mini/: benchmark.json
src/evaluation/benchmarks/la_trinidad_open_v1/: benchmark.json
src/evaluation/cohorts/la_trinidad_mini/: cohort.json  scenarios.jsonl
src/evaluation/metrics/: __init__.py  distance.py  hazard_exposure.py  hazard_score.py  robustness.py  runtime.py  steps.py  success.py  travel_time.py
src/evaluation/rl_backend/: README.md  __init__.py  rl_routing_wCUDA_wCheckP.py
src/evaluation/runners/: __init__.py  _rl_backend.py  base.py  dqn.py  nna.py  nna_astar.py  nna_astar_blind.py  nna_blind.py  nna_ha.py  nna_ha_blind.py
src/evaluation/sampling/: __init__.py  scc_restricted.py  uniform_open.py
(+43 files in other folders)
