[project]
name = "benguet-flood-and-landslide-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "osmnx>=2.0.7",
    "tqdm>=4.67.3",
]
